# rs-pg-schemas2ql

./: Cargo.toml  README.md  schk.sh
.sqlx/: query-19c5e215ebab988ac0120e99d7943226e3d04886845d9e690b685106f6deba13.json  query-f1752deacba384987176319661b00f3400c9a162bd123d060d3fc6fd6457642e.json
examples/schemas2ql/: Cargo.toml  example.sh  pg-schemas.graphql  schemas2ql
examples/schemas2ql/src/: main.rs
src/: db.rs  lib.rs  schema.rs
