[package]
name = "schemas2ql"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[dependencies.rs-pg-schemas2ql]
path = "../.."

[dependencies.async-graphql-axum]
version = "7"
default-features = false
features = [
]

[dependencies.axum]
version = "0"
default-features = false
features = [
    "http1",
    "json",
    "matched-path",
    "original-uri",
    "query",
    "tokio",
    "tower-log",
]

[dependencies.tokio]
version = "1"
default-features = false
features = [
    "macros",
    "rt-multi-thread",
    "net",
]
